src/main/java/com/example/project_management_tool/presentation/shared/error/CustomResourceNotFoundException.java
package com.example.project_management_tool.presentation.shared.error;

public class CustomResourceNotFoundException extends RuntimeException {
    public CustomResourceNotFoundException(String message) {
        super(message);
    }
}
